added detail of events and schedule

--- a/events.html
+++ b/events.html
@@ -50,7 +50,6 @@
                 <a href="events.html" class="mainmenu__item">Events</a>
                 <a href="team.html" class="mainmenu__item">Our Team</a>
                 <a href="sponsors.html" class="mainmenu__item">Sponsors</a>
-                <a href="https://goo.gl/forms/QJNkNsDomFfmerUz1" class="mainmenu__item">Register</a>
             </div>
             <p class="label label--topleft label--vert-mirror">HMRITM</p>
             <p class="label label--bottomright label--vert">The Important Stuff</p>
@@ -115,8 +114,8 @@
                 <div class="box">
                     <div class="box__shadow"></div>
                     <img class="box__img" src="images/2.jpg" alt="Battle of Bands"/>
-                    <h3 class="box__title  box__title--bottom"><span class="box__title-inner" data-hover="TIK-TOk">Tik-TOK</span></h3>
-                    <h4 class="box__text box__text--bottom"><span class="box__text-inner box__text-inner--rotated1">Get Musically</span></h4>
+                    <h3 class="box__title  box__title--bottom"><span class="box__title-inner" data-hover="Voice">Voice</span></h3>
+                    <h4 class="box__text box__text--bottom"><span class="box__text-inner box__text-inner--rotated1">Solo Singing</span></h4>
                 </div>
             </a>
             <a class="grid__item" href="#preview-3">
@@ -148,9 +147,8 @@
                 <div class="box">
                     <div class="box__shadow"></div>
                     <img class="box__img" src="images/6.jpg" alt="Some image"/>
-                    <h3 class="box__title"><span class="box__title-inner" data-hover="Strength">Strength</span></h3>
-                    <h4 class="box__text"><span class="box__text-inner">IRON FIST</span></h4>
-                    <div class="box__deco">💪</div>
+                    <h3 class="box__title"><span class="box__title-inner" data-hover="Dance">Dance</span></h3>
+                    <h4 class="box__text"><span class="box__text-inner">Duet Dance</span></h4>
                 </div>
             </a>
             <a class="grid__item" href="#preview-7">
@@ -166,7 +164,7 @@
                     <div class="box__shadow"></div>
                     <img class="box__img" src="images/8.jpg" alt="Some image"/>
                     <h3 class="box__title"><span class="box__title-inner" data-hover="Colour">Colour</span></h3>
-                    <h4 class="box__text box__text--bottom"><span class="box__text-inner">Rangoli</span></h4>
+                    <h4 class="box__text box__text--bottom"><span class="box__text-inner">Kalakaari</span></h4>
 
                 </div>
             </a>
@@ -263,8 +261,8 @@
                 <div class="box">
                     <div class="box__shadow"></div>
                     <img class="box__img" src="images/20.jpg" alt="Some image"/>
-                    <h3 class="box__title"><span class="box__title-inner" data-hover="Art">Art</span></h3>
-                    <h4 class="box__text box__text--bottom"><span class="box__text-inner">Shoe Muse</span></h4>
+                    <h3 class="box__title"><span class="box__title-inner" data-hover="mimic">Mimic</span></h3>
+                    <h4 class="box__text box__text--bottom"><span class="box__text-inner">Talking Chameleon</span></h4>
                 </div>
             </a>
             <a class="grid__item" href="#preview-21">
@@ -287,17 +285,17 @@
                 <h3 class="box__title"><span class="box__title-inner" data-hover="Dance">Dance</span></h3>
                 <h4 class="box__text"><span class="box__text-inner">Sync</span></h4>
             </div>
-            <p class="overlay__content">Details</p>
+            <a class="overlay__content"><b>Venue</b> - Main Stage<br><b>Timing -</b>Day 2,11:00AM<br><a href="https://goo.gl/forms/Zd2Ihyr48cpL2lUx2"><img src="images/reg.png"></a> </p>
         </div>
         <div class="overlay__item" id="preview-2">
             <div class="box">
                 <div class="box__shadow"></div>
                 <img class="box__img box__img--original" src="images/2.jpg" alt="Some image"/>
-                <h3 class="box__title box__title--straight box__title--bottom"><span class="box__title-inner" data-hover="Music">Tik-TOK</span></h3>
-                <h4 class="box__text box__text--bottom"><span class="box__text-inner box__text-inner--rotated1">Get Musically</span></h4>
+                <h3 class="box__title box__title--straight box__title--bottom"><span class="box__title-inner" data-hover="Voice">Voice</span></h3>
+                <h4 class="box__text box__text--bottom"><span class="box__text-inner box__text-inner--rotated1">Solo Singing</span></h4>
                 <div class="box__deco box__deco--top">&#10032;</div>
             </div>
-            <p class="overlay__content">Details</p>
+            <p class="overlay__content"><b>Venue</b> - Lawn 2 <br><b>Timing -</b>DAY 1,12:00PM<br><a href="https://goo.gl/forms/cV4RcrgFoNJhQsEG3"><img src="images/reg.png"></a></p>
         </div>
         <div class="overlay__item" id="preview-3">
             <div class="box">
@@ -306,7 +304,7 @@
                 <h3 class="box__title"><span class="box__title-inner" data-hover="Style">Style</span></h3>
                 <h4 class="box__text box__text--topcloser"><span class="box__text-inner">Fashion Shuffle</span></h4>
             </div>
-            <p class="overlay__content">Details</p>
+            <p class="overlay__content"><b>Venue</b> - Main Stage<br><br><b>Timing - </b> DAY 1,1:00PM<br><a href="https://goo.gl/forms/0t9aYnEJLtmf7fYB2"><img src="images/reg.png"></a></p>
         </div>
         <div class="overlay__item" id="preview-4">
             <div class="box">
@@ -315,7 +313,7 @@
                 <h3 class="box__title"><span class="box__title-inner" data-hover="Voice">Voice</span></h3>
                 <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Unplugged</span></h4>
             </div>
-            <p class="overlay__content">Details</p>
+            <p class="overlay__content"><b>Venue</b> - Lawn 2<br><br><b>Timing -</b>DAY 1,11:00AM <br><a href="https://goo.gl/forms/bV4ajTbt3NCzu9LE3"><img src="images/reg.png"></a></p>
         </div>
         <div class="overlay__item" id="preview-5">
             <div class="box">
@@ -324,16 +322,16 @@
                 <h3 class="box__title"><span class="box__title-inner" data-hover="Treasure">Treasure</span></h3>
                 <h4 class="box__text box__text--bottomcloser"><span class="box__text-inner">Lootere</span></h4>
             </div>
-            <p class="overlay__content">Details</p>
+            <p class="overlay__content"><b>Venue</b> - College Campus<br><br><b>Timing -</b>DAY 1,10:00AM<br><a href="https://goo.gl/forms/7ywTNcfiOmto0Fsl1"><img src="images/reg.png"></a></p>
         </div>
         <div class="overlay__item" id="preview-6">
             <div class="box">
                 <div class="box__shadow"></div>
                 <img class="box__img box__img--original" src="images/6.jpg" alt="Some image"/>
-                <h3 class="box__title"><span class="box__title-inner" data-hover="Strength">Strength</span></h3>
-                <h4 class="box__text"><span class="box__text-inner">IRON FIST</span></h4>
+                <h3 class="box__title"><span class="box__title-inner" data-hover="Dance">Dance</span></h3>
+                <h4 class="box__text"><span class="box__text-inner">Duet Dance</span></h4>
             </div>
-            <p class="overlay__content">Details</p>
+            <p class="overlay__content"><b>Venue</b> - Main Stage <br><br><b>Timing -</b>DAY 1,10:00AM<br><a href="https://goo.gl/forms/GJXp1GbwBwWGcgUB3"><img src="images/reg.png"></a></p>
         </div>
         <div class="overlay__item" id="preview-7">
             <div class="box">
@@ -342,17 +340,17 @@
                 <h3 class="box__title box__title--straight box__title--bottom"><span class="box__title-inner" data-hover="Debate">Debate</span></h3>
                 <h4 class="box__text box__title--bottom"><span class="box__text-inner box__text-inner--rotated1">Flip Flop</span></h4>
             </div>
-            <p class="overlay__content">Details</p>
+            <p class="overlay__content"><b>Venue</b> - Room 201<br><br><b>Timing -</b>DAY 1,11:00AM<br><a href="https://goo.gl/forms/ELCpsH87OaCfZjWg1"><img src="images/reg.png"></a></p>
         </div>
         <div class="overlay__item" id="preview-8">
             <div class="box">
                 <div class="box__shadow"></div>
                 <img class="box__img box__img--original" src="images/8.jpg" alt="Some image"/>
                 <h3 class="box__title"><span class="box__title-inner" data-hover="Colour">Colour</span></h3>
-                <h4 class="box__text box__text--bottom"><span class="box__text-inner">Rangoli</span></h4>
+                <h4 class="box__text box__text--bottom"><span class="box__text-inner">Kalakaari</span></h4>
                 <div class="box__deco">&#10108;</div>
             </div>
-            <p class="overlay__content">Details</p>
+            <p class="overlay__content"><b>Venue</b> -Outside Admin <br><br><b>Timing -</b>DAY 2,09:00AM<br><a href="https://goo.gl/forms/CDJje6R240p5nZcs2"><img src="images/reg.png"></a></p>
         </div>
         <div class="overlay__item" id="preview-9">
             <div class="box">
@@ -361,7 +359,7 @@
                 <h3 class="box__title"><span class="box__title-inner" data-hover="Idols">Idols</span></h3>
                 <h4 class="box__text box__text--bottom"><span class="box__text-inner">Mr. & Ms. Emblazon</span></h4>
             </div>
-            <p class="overlay__content">Details</p>
+            <p class="overlay__content"><b>Venue</b> - Main Stage<br><br><b>Timing -</b>DAY 2,09:00AM<br><a href="https://goo.gl/forms/kJ0EhfM2hW8Mdlh53"><img src="images/reg.png"></a></p>
         </div>
         <div class="overlay__item" id="preview-10">
             <div class="box">
@@ -370,7 +368,7 @@
                 <h3 class="box__title box__title--bottom"><span class="box__title-inner" data-hover="Poems">Poems</span></h3>
                 <h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2">Alfaaz</span></h4>
             </div>
-            <p class="overlay__content">Details</p>
+            <p class="overlay__content"><b>Venue</b> - Room No 201<br><br><b>Timing -</b>DAY 1,12:00PM<br><a href="https://goo.gl/forms/U4TSAghP2eJgFFUg2"><img src="images/reg.png"></a></p>
         </div>
         <div class="overlay__item" id="preview-11">
             <div class="box">
@@ -380,7 +378,7 @@
                 <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Lip SYnc Battle</span></h4>
                 <div class="box__deco box__deco--top">&#10153;</div>
             </div>
-            <p class="overlay__content">Details</p>
+            <p class="overlay__content"><b>Venue</b> - <br><br><b>Timing -</b><br><a href="https://goo.gl/forms/Zd2Ihyr48cpL2lUx2"><img src="images/reg.png"></a></p>
         </div>
         <div class="overlay__item" id="preview-12">
             <div class="box">
@@ -389,7 +387,7 @@
                 <h3 class="box__title box__title--straight box__title--left"><span class="box__title-inner" data-hover="Dance">Dance</span></h3>
                 <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Solo Dance</span></h4>
             </div>
-            <p class="overlay__content">Details</p>
+            <p class="overlay__content"><b>Venue</b> - Lawn 2<br><br><b>Timing -</b>DAY 1,10:00AM<br><a href="https://goo.gl/forms/L04Z3oJfXZvn7RFi2"><img src="images/reg.png"></a></p>
         </div>
         <div class="overlay__item" id="preview-13">
             <div class="box">
@@ -398,7 +396,7 @@
                 <h3 class="box__title box__title--straight box__title--left"><span class="box__title-inner" data-hover="Quiz">Quiz</span></h3>
                 <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Headrush Quiz</span></h4>
             </div>
-            <p class="overlay__content">Details</p>
+            <p class="overlay__content"><b>Venue</b> - Room 201<br><br><b>Timing -</b>DAY 2,11:00 AM<br><a href="https://goo.gl/forms/02R9tOFHOqlU8POr2"><img src="images/reg.png"></a></p>
         </div>
         <div class="overlay__item" id="preview-14">
             <div class="box">
@@ -407,7 +405,7 @@
                 <h3 class="box__title box__title--straight box__title--left"><span class="box__title-inner" data-hover="Drama">Drama</span></h3>
                 <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Street Play</span></h4>
             </div>
-            <p class="overlay__content">Details</p>
+            <p class="overlay__content"><b>Venue</b> - Lawn 1 <br><br><b>Timing -</b>DAY 2,10:00 AM<br><a href="https://goo.gl/forms/2tKAw0PETj9NChPh2"><img src="images/reg.png"></a></p>
         </div>
         <div class="overlay__item" id="preview-15">
             <div class="box">
@@ -416,7 +414,7 @@
                 <h3 class="box__title box__title--straight box__title--left"><span class="box__title-inner" data-hover="Drama">Drama</span></h3>
                 <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">One Act Play</span></h4>
             </div>
-            <p class="overlay__content">Details</p>
+            <p class="overlay__content"><b>Venue</b> - Room 201<br><br><b>Timing -</b>DAY 2,10:00 AM<br><a href="https://goo.gl/forms/UGPYFL9LBMZ3ywgI3"><img src="images/reg.png"></a></p>
         </div>
         <div class="overlay__item" id="preview-16">
             <div class="box">
@@ -425,7 +423,7 @@
                 <h3 class="box__title"><span class="box__title-inner" data-hover="Esports">Esports</span></h3>
                 <h4 class="box__text box__text--bottom"><span class="box__text-inner">Blue Zone</span></h4>
             </div>
-            <p class="overlay__content">Details</p>
+            <p class="overlay__content"><b>Venue</b> - <br><br><b>Timing -</b>DAY 1,11:00 AM<<br><a href="https://goo.gl/forms/wiey85kCccREGIiY2"><img src="images/reg.png"></a>/p>
         </div>
         <div class="overlay__item" id="preview-17">
             <div class="box">
@@ -434,7 +432,7 @@
                 <h3 class="box__title"><span class="box__title-inner" data-hover="Drama">Drama</span></h3>
                 <h4 class="box__text box__text--bottom"><span class="box__text-inner">AD-Maniac</span></h4>
             </div>
-            <p class="overlay__content">Details</p>
+            <p class="overlay__content"><b>Venue</b> - Lawn 1<br><br><b>Timing -</b>DAY 1,11:00 AM<br><a href="https://goo.gl/forms/q1YO4WQspNc55Yzf2"><img src="images/reg.png"></a></p>
         </div>
         <div class="overlay__item" id="preview-18">
             <div class="box">
@@ -443,7 +441,7 @@
                 <h3 class="box__title"><span class="box__title-inner" data-hover="60sec">60sec</span></h3>
                 <h4 class="box__text box__text--bottom"><span class="box__text-inner">Hour Glass</span></h4>
             </div>
-            <p class="overlay__content">Details</p>
+            <p class="overlay__content"><b>Venue</b> - Room 202<br><br><b>Timing -</b>DAY 2,11:00 AM<br><a href="https://goo.gl/forms/8leMm6xDRUXSifBr1"><img src="images/reg.png"></a></p>
         </div>
         <div class="overlay__item" id="preview-19">
             <div class="box">
@@ -452,16 +450,16 @@
                 <h3 class="box__title"><span class="box__title-inner" data-hover="Selfie">Selfie</span></h3>
                 <h4 class="box__text box__text--bottom"><span class="box__text-inner">Selfie Contest</span></h4>
             </div>
-            <p class="overlay__content">Details</p>
+            <p class="overlay__content"><b>Venue</b> - <br><br><b>Timing -</b><br><a href="https://goo.gl/forms/Zd2Ihyr48cpL2lUx2"><img src="images/reg.png"></a></p>
         </div>
         <div class="overlay__item" id="preview-20">
             <div class="box">
                 <div class="box__shadow"></div>
                 <img class="box__img box__img--original" src="images/20.jpg" alt="Some image"/>
-                <h3 class="box__title"><span class="box__title-inner" data-hover="Art">Art</span></h3>
-                <h4 class="box__text box__text--bottom"><span class="box__text-inner">Shoe muse</span></h4>
+                <h3 class="box__title"><span class="box__title-inner" data-hover="MImic">MImic</span></h3>
+                <h4 class="box__text box__text--bottom"><span class="box__text-inner">Talking Chameleon</span></h4>
             </div>
-            <p class="overlay__content">Details</p>
+            <p class="overlay__content"><b>Venue</b> - <br><br><b>Timing -</b><br><a href="https://goo.gl/forms/Zd2Ihyr48cpL2lUx2"><img src="images/reg.png"></a></p>
         </div>
         <div class="overlay__item" id="preview-21">
             <div class="box">
@@ -470,7 +468,7 @@
                 <<h3 class="box__title"><span class="box__title-inner" data-hover="Luck">Luck</span></h3>
                 <h4 class="box__text box__text--bottom"><span class="box__text-inner">Tambola</span></h4>
             </div>
-            <p class="overlay__content">Details</p>
+            <p class="overlay__content"><b>Venue</b> - <br><br><b>Timing -</b> <br><a href="https://goo.gl/forms/zpGIQxWTdo63cxY2"><img src="images/reg.png"></a></p>
         </div>
         <button class="overlay__close"><svg class="icon icon--cross"><use xlink:href="#icon-cross"></use></svg></button>
     </div>
