--- a/schedule.html
+++ b/schedule.html
@@ -40,7 +40,6 @@
                 <a href="events.html" class="mainmenu__item">Events</a>
                 <a href="team.html" class="mainmenu__item">Our Team</a>
                 <a href="sponsors.html" class="mainmenu__item">Sponsors</a>
-                <a href="https://goo.gl/forms/QJNkNsDomFfmerUz1" class="mainmenu__item">Register</a>
             </div>
             <p class="label label--topleft label--vert-mirror">HMRITM</p>
             <p class="label label--bottomright label--vert">The Important Stuff</p>
@@ -96,27 +95,47 @@
             </div>
             <div class="pieces-slider__slide">
                 <img class="pieces-slider__image" src="img/s2.jpg" alt="">
-                <h2 class="pieces-slider__text">Battle Of Band(10:00AM)</h2>
+                <h2 class="pieces-slider__text">Solo Dance(10:00AM)</h2>
             </div>
             <div class="pieces-slider__slide">
-                <img class="pieces-slider__image" src="img/s3.jpg" alt="">
-                <h2 class="pieces-slider__text">Duet Dance</h2>
-            </div>
+            <img class="pieces-slider__image" src="img/s3.jpg" alt="">
+            <h2 class="pieces-slider__text">Duet Dance(10:00AM)</h2>
+        </div>
             <div class="pieces-slider__slide">
                 <img class="pieces-slider__image" src="img/s4.jpg" alt="">
-                <h2 class="pieces-slider__text">Duet Singing</h2>
+                <h2 class="pieces-slider__text">Lootere(10:00AM)</h2>
             </div>
             <div class="pieces-slider__slide">
                 <img class="pieces-slider__image" src="img/s5.jpg" alt="">
-                <h2 class="pieces-slider__text">Solo Dance</h2>
-            </div>
-            <div class="pieces-slider__slide">
-                <img class="pieces-slider__image" src="img/s7.jpg" alt="">
-                <h2 class="pieces-slider__text">One Act Play</h2>
+                <h2 class="pieces-slider__text">Unplugged(11:00AM)</h2>
             </div>
             <div class="pieces-slider__slide">
                 <img class="pieces-slider__image" src="img/s6.jpg" alt="">
-                <h2 class="pieces-slider__text">Fashion Parade</h2>
+                <h2 class="pieces-slider__text">Blue Zone(11:00AM)</h2>
+            </div>
+            <div class="pieces-slider__slide">
+                <img class="pieces-slider__image" src="img/s7.jpg" alt="">
+                <h2 class="pieces-slider__text">Flip-Flop(11:00AM)s</h2>
+            </div>
+            <div class="pieces-slider__slide">
+                <img class="pieces-slider__image" src="img/s8.jpg" alt="">
+                <h2 class="pieces-slider__text">Ad-Maniac(11:00AM)</h2>
+            </div>
+            <div class="pieces-slider__slide">
+                <img class="pieces-slider__image" src="img/s9.jpg" alt="">
+                <h2 class="pieces-slider__text">Poetry(12:00PM)</h2>
+            </div>
+            <div class="pieces-slider__slide">
+                <img class="pieces-slider__image" src="img/s10.jpg" alt="">
+                <h2 class="pieces-slider__text">Solo Singing(12:00PM)</h2>
+            </div>
+            <div class="pieces-slider__slide">
+                <img class="pieces-slider__image" src="img/s11.jpg" alt="">
+                <h2 class="pieces-slider__text">Fashion Shuffle(1:00PM)</h2>
+            </div>
+            <div class="pieces-slider__slide">
+                <img class="pieces-slider__image" src="img/s12.jpg" alt="">
+                <h2 class="pieces-slider__text">Jam Session(3:00PM)</h2>
             </div>
             <!-- Canvas to draw the pieces -->
             <canvas class="pieces-slider__canvas"></canvas>
