--- a/sponsors.html
+++ b/sponsors.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Emblazon 2019||The Cultural Fest of HMRITM</title>
     <link rel="shortcut icon" href="images/mask_logo.png">
      <!-- Animate -->
@@ -48,7 +50,6 @@
                 <a href="events.html" class="mainmenu__item">Events</a>
                 <a href="team.html" class="mainmenu__item">Our Team</a>
                 <a href="sponsors.html" class="mainmenu__item">Sponsors</a>
-                <a href="https://goo.gl/forms/QJNkNsDomFfmerUz1" class="mainmenu__item">Register</a>
             </div>
             <p class="label label--topleft label--vert-mirror">HMRITM</p>
             <p class="label label--bottomright label--vert">The Important Stuff</p>
@@ -92,7 +93,7 @@
     <button class="action action--menu"><svg class="icon icon--menu"><use xlink:href="#icon-menu"></use></svg></button>
     <button class="action action--close"><svg class="icon icon--close"><use xlink:href="#icon-close"></use></svg></button>
 </nav>
-<center><img class="kong responsive-img " src="images/sponsor.png" width=30% ></center>
+<center><img class="kong responsive-img " src="images/sponsor.png" width=40% ></center>
 <div style="padding-top: 3%"></div>
 <div class="spo">
 <div class="row">
