--- a/schedule2.html
+++ b/schedule2.html
@@ -40,7 +40,6 @@
                 <a href="events.html" class="mainmenu__item">Events</a>
                 <a href="team.html" class="mainmenu__item">Our Team</a>
                 <a href="sponsors.html" class="mainmenu__item">Sponsors</a>
-                <a href="https://goo.gl/forms/QJNkNsDomFfmerUz1" class="mainmenu__item">Register</a>
             </div>
             <p class="label label--topleft label--vert-mirror">HMRITM</p>
             <p class="label label--bottomright label--vert">The Important Stuff</p>
@@ -92,59 +91,43 @@
         <div class="pieces-slider" style="margin-top: -20px;">
             <!-- Each slide with corresponding image and text -->
             <div class="pieces-slider__slide">
-                <img class="pieces-slider__image" src="img/1.jpg" alt="">
-                <h2 class="pieces-slider__text">Kalakaari</h2>
+                <img class="pieces-slider__image" src="img/21.jpg" alt="">
+                <h2 class="pieces-slider__text">Kalakaari(09:00AM)</h2>
             </div>
             <div class="pieces-slider__slide">
-                <img class="pieces-slider__image" src="img/2.jpg" alt="">
-                <h2 class="pieces-slider__text">One Act Play</h2>
+                <img class="pieces-slider__image" src="img/22.jpg" alt="">
+                <h2 class="pieces-slider__text">Mr. and Ms. Emblazon(09:00AM)</h2>
             </div>
             <div class="pieces-slider__slide">
-                <img class="pieces-slider__image" src="img/3.jpg" alt="">
-                <h2 class="pieces-slider__text">Mr. and Ms. Emblazon</h2>
+                <img class="pieces-slider__image" src="img/23.jpg" alt="">
+                <h2 class="pieces-slider__text">One Act Play(10:00AM)</h2>
             </div>
             <div class="pieces-slider__slide">
-                <img class="pieces-slider__image" src="img/4.jpg" alt="">
-                <h2 class="pieces-slider__text">Hour Glass</h2>
+                <img class="pieces-slider__image" src="img/24.jpg" alt="">
+                <h2 class="pieces-slider__text">Street Play(10:00AM)</h2>
             </div>
             <div class="pieces-slider__slide">
-                <img class="pieces-slider__image" src="img/5.jpg" alt="">
-                <h2 class="pieces-slider__text">Street Play</h2>
+                <img class="pieces-slider__image" src="img/25.jpg" alt="">
+                <h2 class="pieces-slider__text">Hour Glass(11:00AM)</h2>
             </div>
             <div class="pieces-slider__slide">
-                <img class="pieces-slider__image" src="img/5.jpg" alt="">
-                <h2 class="pieces-slider__text">Group Dance</h2>
+                <img class="pieces-slider__image" src="img/26.jpg" alt="">
+                <h2 class="pieces-slider__text">Group Dance(11:00AM)</h2>
             </div>
             <div class="pieces-slider__slide">
-                <img class="pieces-slider__image" src="img/5.jpg" alt="">
-                <h2 class="pieces-slider__text">Tambola</h2>
+                <img class="pieces-slider__image" src="img/27.jpg" alt="">
+                <h2 class="pieces-slider__text">Head Rush(11:00AM)</h2>
             </div>
             <div class="pieces-slider__slide">
-                <img class="pieces-slider__image" src="img/5.jpg" alt="">
-                <h2 class="pieces-slider__text">Head Rush</h2>
+                <img class="pieces-slider__image" src="img/28.jpg" alt="">
+                <h2 class="pieces-slider__text">Prize Distribution(01:00PM)</h2>
             </div>
             <div class="pieces-slider__slide">
-                <img class="pieces-slider__image" src="img/5.jpg" alt="">
-                <h2 class="pieces-slider__text">Prize Distribution</h2>
+                <img class="pieces-slider__image" src="img/29.jpg" alt="">
+                <h2 class="pieces-slider__text">Star Night(02:00PM)</h2>
             </div>
             <div class="pieces-slider__slide">
-                <img class="pieces-slider__image" src="img/5.jpg" alt="">
-                <h2 class="pieces-slider__text">Selfie Contest</h2>
-            </div>
-            <div class="pieces-slider__slide">
-                <img class="pieces-slider__image" src="img/5.jpg" alt="">
-                <h2 class="pieces-slider__text">Talking Chameleon</h2>
-            </div>
-            <div class="pieces-slider__slide">
-                <img class="pieces-slider__image" src="img/5.jpg" alt="">
-                <h2 class="pieces-slider__text">Lip-Sync Battle</h2>
-            </div>
-            <div class="pieces-slider__slide">
-                <img class="pieces-slider__image" src="img/5.jpg" alt="">
-                <h2 class="pieces-slider__text">Star Night</h2>
-            </div>
-            <div class="pieces-slider__slide">
-                <img class="pieces-slider__image" src="img/5.jpg" alt="">
+                <img class="pieces-slider__image" src="img/30.jpg" alt="">
                 <h2 class="pieces-slider__text">Jam Session</h2>
             </div>
             <!-- Canvas to draw the pieces -->
